[package]
name = "ash-layer"
description = "Vulkan layer bindings atop Ash"
version = "0.0.1"
edition = "2021"
rust-version = "1.59.0"
authors = ["Huang-Huang Bao <i@eh5.me>"]
homepage = "https://github.com/EHfive/ash-layer"
repository = "https://github.com/EHfive/ash-layer"
license = "MIT OR Apache-2.0"
keywords = ["graphics", "vulkan"]
categories = ["external-ffi-bindings", "graphics"]

[dev-dependencies]
dashmap = "5.4.0"
once_cell = "1.17.0"

[dependencies.ash]
version = "0.37.1"
default-features = false

[features]
default = ["debug"]
debug = ["ash/debug"]

[[example]]
name = "layer_dummy"
crate-type = ["cdylib"]
